# shiny-invoice

./: .gitignore  .pylintrc  Dockerfile  README.md  pyproject.toml
.github/workflows/: ci-pipeline.yml  python-publish.yml
shiny_invoice/: shiny_invoice.py  ui_config.py  ui_existing_invoices.py  ui_new_invoice.py
shiny_invoice/templates/: default_de.html
